# xtherma_ha

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  configuration.yaml  dev-requirements.txt  hacs.json  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: tests.yml
config/: configuration.yaml
custom_components/xtherma_fp/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  entity_descriptors.py  manifest.json  number.py  select.py  sensor.py  sensor_descriptors.py  switch.py  xtherma_client.py  xtherma_client_common.py  xtherma_client_modbus.py  xtherma_client_rest.py  xtherma_data.py
custom_components/xtherma_fp/translations/: de.json  en.json
scripts/: release  setup
tests/: .ruff.toml  __init__.py  conftest.py  const.py  helpers.py  test_binary_sensor.py  test_common.py  test_config_flow.py  test_entity_description.py  test_number.py  test_option_flow.py  test_select.py  test_sensor.py  test_sensor_description.py  test_switch.py  test_translations.py  test_xtherma_fp.py  test_xtherma_modbus.py
tests/fixtures/: rest_response.json
tests/snapshots/: test_binary_sensor.ambr  test_number.ambr  test_select.ambr  test_sensor.ambr  test_switch.ambr  test_xtherma_modbus.ambr
