[project]
name = "xtherma"
description = "Xtherma integration for Home Assistant"
license = "Apache License Version 2.0"
version = "v0.1"
authors = [
    {name = "xrad"},
]
requires-python = '>=3.13,<3.14'
dynamic = ["dependencies"]

[tool.ruff]
fix = true
extend-exclude = ["tests"]
lint.select = ["ALL"]
lint.extend-ignore = ["ANN001", "EXE002"]
lint.pydocstyle.convention = "google"
format.docstring-code-format = true