[project]
name = "xtherma"
description = "Xtherma integration for Home Assistant"
license = "Apache License Version 2.0"
version = "v0.1"
authors = [
    {name = "xrad"},
]
requires-python = '>=3.13,<3.14'
dynamic = ["dependencies"]

[tool.ruff]
fix = true
extend-exclude = ["tests", "custom_components/xtherma_fp/vendor"]
lint.select = ["ALL"]
lint.extend-ignore = ["ANN001", "EXE002","FBT001"]
lint.pydocstyle.convention = "google"
format.docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
#markers = "asyncio"
asyncio_default_fixture_loop_scope = "function"